--- a/TimeTrackingReport/TimeTrackingReport/TimeTrackingReport.vcxproj
+++ b/TimeTrackingReport/TimeTrackingReport/TimeTrackingReport.vcxproj
@@ -139,11 +139,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Employee.cpp" />
     <ClCompile Include="InfoManager.cpp" />
+    <ClCompile Include="Time.cpp" />
     <ClCompile Include="TimeTrackingReport.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Employee.h" />
     <ClInclude Include="InfoManager.h" />
+    <ClInclude Include="Time.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
