--- a/TimeTrackingReport/TimeTrackingReport/TimeTrackingReport.vcxproj
+++ b/TimeTrackingReport/TimeTrackingReport/TimeTrackingReport.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="Employee.cpp" />
     <ClCompile Include="Exceptions.cpp" />
     <ClCompile Include="InfoManager.cpp" />
+    <ClCompile Include="Logger.cpp" />
     <ClCompile Include="Parser.cpp" />
     <ClCompile Include="Time.cpp" />
     <ClCompile Include="TimeTrackingReport.cpp" />
@@ -150,6 +151,7 @@
     <ClInclude Include="Employee.h" />
     <ClInclude Include="Exceptions.h" />
     <ClInclude Include="InfoManager.h" />
+    <ClInclude Include="Logger.h" />
     <ClInclude Include="Parser.h" />
     <ClInclude Include="Time.h" />
   </ItemGroup>
